<?xml version="1.0" encoding="utf-8"?>
<!--멘토 메인화면-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical">

    <!--검색창-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/mentor_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="true"
            android:background="@drawable/rectangle_43"
            android:searchIcon="@drawable/search"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <!--새로운 멘티가 있어요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/newMentee"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/newMentee"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src=""/>
        </LinearLayout>
    </LinearLayout>

    <!--궁금한 문제가 있어요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/askQuestion"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                tools:listitem="@layout/recycleview_question_card"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>

    <!--이달의 활동 리뷰-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/activityReview"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--멘티를 구해요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/homeRecruitMentee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="107dp"
            android:fontFamily="sans-serif"
            android:text="@string/recruitMentee"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menteeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:text="@string/menteeInfo"
            android:background="@drawable/rectangle_2"/>
    </LinearLayout>
</LinearLayout>
