<?xml version="1.0" encoding="utf-8"?>
<!--멘토 메인화면-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical">

    <!--검색창-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/mentor_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="true"
            android:background="@drawable/rectangle_43"
            android:searchIcon="@drawable/search"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>

    <!--새로운 멘티가 있어요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/newMentee_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/newMentee"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_newMentee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/recyclerview_mentee_card"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <!--궁금한 문제가 있어요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/question_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/askQuestion"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/recyclerview_question_card"/>
    </LinearLayout>

    <!--이달의 활동 리뷰-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/review_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/activityReview"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <!--<ImageButton
                android:id="@+id/menteeProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/rounded_gray" />
            <TextView
                android:id="@+id/menteeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:gravity="center_horizontal"
                android:text="name" />-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/recyclerview_mentee_card"
                android:layout_marginBottom="20dp" />
        </LinearLayout>
    </LinearLayout>

    <!--멘티를 구해요-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/homeRecruitMentee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="26dp"
            android:text="@string/recruitMentee"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menteeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:text="@string/menteeInfo"
            android:background="@drawable/rectangle_2"/>
    </LinearLayout>
</LinearLayout>
