<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentorSignUpActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="176dp"
            android:fontFamily="sans-serif"
            android:lineHeight="47sp"
            android:text="@string/app_name"
            android:textColor="#006BCE"
            android:textFontWeight="700"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:lineHeight="22sp"
            android:text="@string/askMentorSignUp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mentor_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:width="320dp"
            android:height="45dp"
            android:background="@drawable/rounded_blue"
            android:lineHeight="22sp"
            android:text="Blu-e멘토 계정 만들기"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:background="@drawable/hr_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:text="@string/snsSignUp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:lineHeight="16sp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:layout_marginTop="23dp">

            <ImageButton
                android:id="@+id/kakao_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/kakao_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/naver_icon"

                />
            <ImageButton
                android:id="@+id/naver_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/naver_icon"
                app:layout_constraintStart_toEndOf="@+id/kakao_icon"
                app:layout_constraintEnd_toStartOf="@+id/google_icon"
                android:layout_marginRight="19.56dp"
                android:layout_marginLeft="19.56dp"
                />
            <ImageButton
                android:id="@+id/google_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/naver_icon"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>